Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -55,11 +55,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}"
+    "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
+    "greenv"
    ]
   },
   {
