--- a/index.ipynb
+++ b/index.ipynb
@@ -55,12 +55,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
-    "greenv"
+    "greenville"
    ]
   },
   {
