Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -95,7 +95,7 @@
    "outputs": [],
    "source": [
     "greenville_population = None # change None\n",
-    "greenville_population # 93"
+    "greenville_population ="
    ]
   },
   {
