Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -107,7 +107,8 @@
    ],
    "source": [
     "greenville_population = None # change None\n",
-    "greenville_population =greenville['']"
+    "greenville_population =greenville['Population']\n",
+    "g"
    ]
   },
   {
