--- a/index.ipynb
+++ b/index.ipynb
@@ -124,7 +124,7 @@
    "outputs": [],
    "source": [
     "greenville_area = None\n",
-    "greenville_area # 68"
+    "greenville_are"
    ]
   },
   {
