Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -124,7 +124,8 @@
    "outputs": [],
    "source": [
     "greenville_area = None\n",
-    "greenville_area = greenville['']"
+    "greenville_area = greenville['Area']\n",
+    "greenvil"
    ]
   },
   {
