--- a/index.ipynb
+++ b/index.ipynb
@@ -119,13 +119,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "68"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "greenville_area = None\n",
     "greenville_area = greenville['Area']\n",
-    "greenvil"
+    "greenville_area"
    ]
   },
   {
