Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -153,7 +153,8 @@
    "outputs": [],
    "source": [
     "city_keys = None\n",
-    "city_keys # ['Area', 'City', 'Country', 'Population']"
+    "city_keys # ['Area', 'City', 'Country', 'Population']\n",
+    "city"
    ]
   },
   {
