--- a/index.ipynb
+++ b/index.ipynb
@@ -154,7 +154,7 @@
    "source": [
     "city_keys = None\n",
     "city_keys # ['Area', 'City', 'Country', 'Population']\n",
-    "city_keys = greenville"
+    "city_keys = greenville[0].keys9"
    ]
   },
   {
