--- a/index.ipynb
+++ b/index.ipynb
@@ -183,7 +183,8 @@
    "outputs": [],
    "source": [
     "city_values = None\n",
-    "city_values # [68, 'Greenville', 'USA', 93]"
+    "city_values # [68, 'Greenville', 'USA', 93]\n",
+    "city_values = gr"
    ]
   },
   {
