Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -178,13 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "city_values = None\n",
     "city_values # [68, 'Greenville', 'USA', 93]\n",
-    "city_values = gr"
+    "city_values = greenville.values()\n",
+    "city"
    ]
   },
   {
