Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -178,14 +178,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([68, 'Greenville', 'USA', 93])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_values = None\n",
     "city_values # [68, 'Greenville', 'USA', 93]\n",
     "city_values = greenville.values()\n",
-    "city"
+    "city_values"
    ]
   },
   {
