--- a/index.ipynb
+++ b/index.ipynb
@@ -336,7 +336,7 @@
    "outputs": [],
    "source": [
     "salina = None \n",
-    "salina\n",
+    "salina =cities\n",
     "# {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
    ]
   },
