Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -331,12 +331,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "salina = None \n",
-    "salina =cities\n",
+    "salina =cities[-2]\n",
     "# {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
    ]
   },
