Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -331,23 +331,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'Solta', 'Country': 'Croatia', 'Population': 2, 'Area': 59}"
+       "{'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "salina = None \n",
-    "salina =cities[-2]\n",
+    "salina =cities[-3]\n",
     "salina\n",
     "# {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
    ]
