--- a/index.ipynb
+++ b/index.ipynb
@@ -366,7 +366,8 @@
    "outputs": [],
    "source": [
     "los_cabos_pop = None\n",
-    "los_cabos_pop # 288"
+    "los_cabos_pop # 288\n",
+    "los_cabos"
    ]
   },
   {
