--- a/index.ipynb
+++ b/index.ipynb
@@ -367,7 +367,7 @@
    "source": [
     "los_cabos_pop = None\n",
     "los_cabos_pop # 288\n",
-    "los_cabos"
+    "los_cabos_pop ="
    ]
   },
   {
