--- a/index.ipynb
+++ b/index.ipynb
@@ -378,7 +378,7 @@
    "source": [
     "los_cabos_pop = None\n",
     "los_cabos_pop # 288\n",
-    "los_cabos_pop = cities[4]\n",
+    "los_cabos_pop = cities[4]()\n",
     "los_cabos_pop"
    ]
   },
