--- a/index.ipynb
+++ b/index.ipynb
@@ -398,7 +398,8 @@
    "outputs": [],
    "source": [
     "city_count = None\n",
-    "city_count # 12"
+    "city_count # 12\n",
+    "city_count = cities"
    ]
   },
   {
