Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -399,7 +399,7 @@
    "source": [
     "city_count = None\n",
     "city_count # 12\n",
-    "city_count = cities"
+    "city_count = len.cities"
    ]
   },
   {
