--- a/index.ipynb
+++ b/index.ipynb
@@ -391,16 +391,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_count = None\n",
     "city_count # 12\n",
     "city_count = len(cities)\n",
-    "cit"
+    "city_count"
    ]
   },
   {
