--- a/index.ipynb
+++ b/index.ipynb
@@ -428,7 +428,8 @@
    "outputs": [],
    "source": [
     "cities[7]['City'] = None\n",
-    "cities[7]['City'] # 'PyeongChang'"
+    "cities[7]['City'] # 'PyeongChang'\n",
+    "cities[7]['City']=[]"
    ]
   },
   {
