--- a/index.ipynb
+++ b/index.ipynb
@@ -459,7 +459,8 @@
    "source": [
     "pyeongchang_values = None\n",
     "\n",
-    "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]"
+    "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]\n",
+    "pyeongchang_values = cities"
    ]
   },
   {
