Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -453,14 +453,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "pyeongchang_values = None\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]\n",
-    "pyeongchang_values = cities"
+    "pyeongchang_values = cities[7].values()\n",
+    "pye"
    ]
   },
   {
