Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -423,16 +423,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['PyeongChang']"
+       "'PyeongChang'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
    "source": [
     "cities[7]['City'] = None\n",
     "cities[7]['City'] # 'PyeongChang'\n",
-    "cities[7]['City']=['PyeongChang']\n",
+    "cities[7]['City']='PyeongChang'\n",
     "cities[7]['City']"
    ]
   },
@@ -453,15 +453,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([['PyeongChang'], 'South Korea', 44, 1464])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pyeongchang_values = None\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]\n",
     "pyeongchang_values = cities[7].values()\n",
-    "pye"
+    "pyeongchang_values"
    ]
   },
   {
