Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -472,7 +472,7 @@
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]\n",
     "pyeongchang_values = cities[7].values()\n",
-    "pyeongchang_values =list.cities"
+    "pyeongchang_values =list(cities[7.values()]"
    ]
   },
   {
