Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -453,18 +453,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "dict_values(['PyeongChang', 'South Korea', 44, 1464])"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-46-d8d2fc0a4d2c>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-46-d8d2fc0a4d2c>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    pyeongchang_values =list(cities[7]values())\u001b[0m\n\u001b[0m                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
@@ -472,7 +470,7 @@
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]\n",
     "pyeongchang_values = cities[7].values()\n",
-    "pyeongchang_values =list(cities[7.values()]"
+    "pyeongchang_values =list(cities[7]values())"
    ]
   },
   {
