Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -499,7 +499,9 @@
    "source": [
     "pyeongchang_keys = None\n",
     "\n",
-    "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']"
+    "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
+    "\n",
+    "pyeongchang_keys = list"
    ]
   },
   {
