Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -501,7 +501,7 @@
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
     "\n",
-    "pyeongchang_keys = list"
+    "pyeongchang_keys = list(cities[7].keys())"
    ]
   },
   {
