--- a/index.ipynb
+++ b/index.ipynb
@@ -493,22 +493,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['City', 'Country', 'Population', 'Area']"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pyeongchang_keys = None\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
     "\n",
-    "pyeongchang_keys = list(cities[7].keys())"
+    "pyeongchang_keys = list(cities[7].keys())\n",
+    "pyeongchang_keys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(pyeongchang_keys) # list"
    ]
